--- a/app/templates/add_host.html
+++ b/app/templates/add_host.html
@@ -25,6 +25,16 @@
             <label for="port">SSH Port</label>
             <input type="number" class="form-control" id="port" name="port" value="22" required>
         </div>
+        <div class="form-group">
+            <label for="category">Category</label>
+            <select class="form-control" id="category" name="category" required>
+                <option value="Linux">Linux</option>
+                <option value="Windows">Windows</option>
+                <option value="FreeBSD">FreeBSD</option>
+                <option value="VMware">VMware</option>
+                <option value="Proxmox">Proxmox</option>
+            </select>
+        </div>
         <button type="submit" class="btn btn-primary">Add Host</button>
     </form>
 {% endblock %}
