--- a/app/templates/add_host.html
+++ b/app/templates/add_host.html
@@ -33,6 +33,7 @@
                 <option value="FreeBSD">FreeBSD</option>
                 <option value="VMware">VMware</option>
                 <option value="Proxmox">Proxmox</option>
+                <option value="Synology">Synology</option>
             </select>
         </div>
         <button type="submit" class="btn btn-primary">Add Host</button>
